syntax = "proto3";
package DataService;
option csharp_namespace = "DataService.Rpc";

service PolicyData {
  rpc GetPermissions (UserRequest) returns (PermissionsResponse) {}

  rpc GetRoles (UserRequest) returns (RolesResponse) {}

  rpc HasRole (HasRoleRequest) returns (HasRoleResponse) {}

  rpc HasPermissions (HasPermissionsRequest) returns (HasPermissionsResponse) {}
}


message UserRequest {
	string id = 1;
}

message PermissionsResponse {
	repeated string permissions = 1;
}

message RolesResponse {
	repeated string roles = 1;
}

message HasRoleRequest {
	string role = 1;
}

message HasRoleResponse {
	bool result = 1;
}

message HasPermissionsRequest {
	repeated string permissions = 1;
}

message HasPermissionsResponse {
	bool result = 1;
}